--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -7,40 +7,35 @@
 
     <!-- styles -->
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
-    {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
     {% style "/css/screen.css" %}
   </head>
   <body>
       <!-- navbar -->
-      <div id="navbar">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button class="navbar-toggle"
-                            data-target="#app-navbar"
-                            data-toggle="collapse"
-                            aria-expanded="false"
-                            aria-controls="navbar">
-                        <span class="sr-only">Toggle Navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="{{servlet-context}}/" class="navbar-brand"><<name>></a>
-                </div>
-                <div id="app-navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li {% ifequal page "home.html" %} class="active"{%endifequal%}>
-                        <a href="{{servlet-context}}/">Home</a>
-                        </li>
-                        <li {% ifequal page "about.html" %} class="active"{%endifequal%}>
-                        <a href="{{servlet-context}}/about">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
+      <nav class="navbar navbar-light bg-faded" role="navigation">
+          <button class="navbar-toggler hidden-sm-up"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapsing-navbar">
+              &#9776;
+          </button>
+          <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
+              <a class="navbar-brand" href="{{servlet-context}}/"><<name>></a>
+              <ul class="nav navbar-nav">
+                  <li class="nav-item">
+                      <a href="{{servlet-context}}/"
+                         class="navbar-brand{% ifequal page "home.html" %} active{%endifequal%}">
+                      home
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="{{servlet-context}}/about"
+                         class="nav-link{% ifequal page "about.html" %} active{%endifequal%}">
+                      about
+                      </a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
 
     <div class="container">
       {% block content %}
@@ -49,8 +44,8 @@
 
     <!-- scripts -->
     {% script "/assets/jquery/jquery.min.js" %}
+    {% script "/assets/tether/dist/js/tether.min.js" %}
     {% script "/assets/bootstrap/js/bootstrap.min.js" %}
-    {% script "/assets/bootstrap/js/collapse.js" %}
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
