--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -7,6 +7,8 @@
 
     <!-- styles -->
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
+    {% style "/assets/font-awesome/css/font-awesome.min.css" %}
+
     {% style "/css/screen.css" %}
   </head>
   <body>
