--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -22,6 +22,7 @@
 
     <script type="text/javascript">
         var context = "{{servlet-context}}";
+        var csrfToken = "{{csrf-token}}";
     </script>
     {% script "/js/app.js" %}
   </body>
