--- a/resources/leiningen/new/luminus/core/resources/templates/base.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/base.html
@@ -25,7 +25,7 @@
               <ul class="nav navbar-nav">
                   <li class="nav-item">
                       <a href="{{servlet-context}}/"
-                         class="navbar-brand{% ifequal page "home.html" %} active{%endifequal%}">
+                         class="nav-link{% ifequal page "home.html" %} active{%endifequal%}">
                       home
                       </a>
                   </li>
