--- a/resources/leiningen/new/luminus/cljs/templates/home.html
+++ b/resources/leiningen/new/luminus/cljs/templates/home.html
@@ -6,7 +6,7 @@
       <title>Welcome to <<name>></title>
   </head>
   <body>
-    <div id="navbar"></div>
+    <%if not re-frame %><div id="navbar"></div><% endif %>
     <div id="app">
       <div class="container-fluid">
         <div class="card-deck">
