--- a/resources/leiningen/new/luminus/core/resources/css/screen.css
+++ b/resources/leiningen/new/luminus/core/resources/css/screen.css
@@ -5,6 +5,8 @@ body {
 }
 .navbar {
   margin-bottom: 10px;
+  background-color: #3e51ff;
+  border-radius: 0px;
 }
 .navbar-brand {
   float: none;
