--- a/resources/leiningen/new/luminus/core/resources/templates/base.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <!-- navbar -->
-      <nav class="navbar navbar-dark" role="navigation">
+      <nav class="navbar navbar-dark bg-primary" role="navigation">
           <button class="navbar-toggler hidden-sm-up"
                   type="button"
                   data-toggle="collapse"
