--- a/resources/leiningen/new/luminus/core/resources/templates/about.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>this is the story of <<name>>... work in progress</p>
+  <img src="{{servlet-context}}/img/warning_clojure.png"></img>
 {% endblock %}
