--- a/resources/leiningen/new/luminus/cljs/templates/home.html
+++ b/resources/leiningen/new/luminus/cljs/templates/home.html
@@ -12,8 +12,9 @@
         <div class="card-deck">
           <div class="card-block">
             <h4>Welcome to <<name>></h4>
-            <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
-            <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
+            <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p><% if not boot %>
+            <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p><% else %>
+            <p>Please close this process and start the server with <code>boot figwheel</code> to enable the ClojureScript compiler.<% endif %>
             <h4>For better ClojureScript development experience in Chrome follow these steps:</h4>
             <ul>
               <li>Open DevTools
