--- a/resources/leiningen/new/luminus/core/resources/templates/base.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <META name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to <<name>></title>
 
     <!-- styles -->
