switched to use bootstrap hamburger

--- a/resources/leiningen/new/luminus/core/resources/templates/base.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/base.html
@@ -18,7 +18,7 @@
                   type="button"
                   data-toggle="collapse"
                   data-target="#collapsing-navbar">
-              &#9776;
+              <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand" href="{{servlet-context}}/"><<name>></a>
           <div class="collapse navbar-collapse" id="collapsing-navbar">
