--- a/resources/leiningen/new/luminus/core/resources/templates/base.html
+++ b/resources/leiningen/new/luminus/core/resources/templates/base.html
@@ -20,17 +20,17 @@
                   data-target="#collapsing-navbar">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{{servlet-context}}/"><<name>></a>
+          <a class="navbar-brand" href="<% if servlet %>{{servlet-context}}<% endif %>/"><<name>></a>
           <div class="collapse navbar-collapse" id="collapsing-navbar">
               <ul class="nav navbar-nav">
                   <li class="nav-item">
-                      <a href="{{servlet-context}}/"
+                      <a href="<% if servlet %>{{servlet-context}}<% endif %>/"
                          class="nav-link{% ifequal page "home.html" %} active{%endifequal%}">
                       home
                       </a>
                   </li>
                   <li class="nav-item">
-                      <a href="{{servlet-context}}/about"
+                      <a href="<% if servlet %>{{servlet-context}}<% endif %>/about"
                          class="nav-link{% ifequal page "about.html" %} active{%endifequal%}">
                       about
                       </a>
@@ -49,10 +49,9 @@
     {% script "/assets/font-awesome/svg-with-js/js/fontawesome.min.js" %}
     {% script "/assets/tether/dist/js/tether.min.js" %}
     {% script "/assets/bootstrap/js/bootstrap.min.js" %}
-
-    <script type="text/javascript">
+    <% if servlet %><script type="text/javascript">
       var context = "{{servlet-context}}";
-    </script>
+    </script><% endif %>
     {% block page-scripts %}
     {% endblock %}
   </body>
